fix(components): fixed scrollbar style for firefox
feature/147507-enhancement-table-tk

--- a/src/scss/mixins/_scrollbar.scss
+++ b/src/scss/mixins/_scrollbar.scss
@@ -1,4 +1,7 @@
 @mixin scrollbar($color) {
+  scrollbar-color: $color transparent;
+  scrollbar-width: thin;
+
   &::-webkit-scrollbar {
     width: $bp-scrollbar-size;
     height: $bp-scrollbar-size;
